feat: add href every tag a

--- a/index.html
+++ b/index.html
@@ -30,17 +30,29 @@
       <main>
         <img src="./images/image-600x600.jpg" alt="rizki bagus" />
         <h1>Rizki Bagus A.</h1>
-        <p>Full Stack Web Developer</p>
-        <a href=""><i class="fa-brands fa-instagram"></i> Instagram</a>
-        <a href=""><i class="fa-brands fa-square-x-twitter"></i> Twitter</a>
-        <a href=""><i class="fa-brands fa-square-facebook"></i>Facebook</a>
-        <a href=""><i class="fa-brands fa-linkedin"></i>Linkedln</a>
+        <p>Software Engineer</p>
+        <a href="https://www.instagram.com/"
+          ><i class="fa-brands fa-instagram"></i> Instagram</a
+        >
+        <a href="https://x.com/?lang=en"
+          ><i class="fa-brands fa-square-x-twitter"></i> Twitter</a
+        >
+        <a href="https://www.facebook.com/"
+          ><i class="fa-brands fa-square-facebook"></i>Facebook</a
+        >
+        <a href="https://www.linkedin.com/in/rizkibagusa/"
+          ><i class="fa-brands fa-linkedin"></i>Linkedln</a
+        >
       </main>
       <footer>
-        <p>made with ❤️‍🔥 by <a href="">rizkybagus.</a></p>
+        <p>
+          made with ❤️‍🔥 by
+          <a
+            href="mailto:rizkibagus@example.com?subject=Job%20Opportunity&body=Hello%20Rizki,%20I%20would%20like%20to%20discuss%20a%20job%20opportunity."
+            >rizkybagus.</a
+          >
+        </p>
       </footer>
     </section>
   </body>
 </html>
-
-
